config github login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,6 +15,13 @@
     Login With Google
   </button>
 
+  <br>
+
+  <button (click)="loginGithub()"
+          id="github">
+    Login With GitHub
+  </button>
+
   <button routerLink="/login-email"
           id="email">
     Email
