--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,6 @@
 #lock {
   width:40%;
-  margin: 1.5em auto 4em auto;
+  margin: 0.5em auto 1.5em auto;
   display:block;
 }
 
@@ -21,6 +21,13 @@
   background-size: 25px;
 }
 
+#github {
+  border: 1px solid #95989A;
+  background: #444  url('../../assets/images/github.svg') no-repeat 25px;
+  background-size: 25px;
+  color: #FFF;
+}
+
 @media (max-width: 600px) {
   #page {
     padding:1em;
@@ -35,6 +42,10 @@
 
   #google {
     background: #fff;
+  }
+
+  #github {
+    background: #444;
   }
 
   #email {
