--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,4 +32,9 @@
        class="alc">
         No account? <strong>Create one here</strong>
     </a>
+    <a routerLink="/reset-password"
+       routerLinkActive="active"
+       class="alc">
+        Forgot password?
+    </a>
 </div>
