--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <img src="../../assets/images/lock.svg" id="lock">
+    <img src="../../../assets/images/lock.svg" id="lock">
 
     <span class="error" *ngIf="error">{{ error }}</span>
 
@@ -17,10 +17,10 @@
 
     <br>
 
-    <button (click)="loginGithub()"
+    <!--<button (click)="loginGithub()"
             id="github">
         Login With GitHub
-    </button>
+    </button>-->
 
     <button routerLink="/login-email"
             id="email">
