--- a/src/app/view/login/login.component.css
+++ b/src/app/view/login/login.component.css
@@ -5,25 +5,25 @@
 }
 
 #fb {
-    background: #3B5998 url('../../assets/images/facebook.svg') no-repeat 14px 6px;
+    background: #3B5998 url('../../../assets/images/facebook.svg') no-repeat 14px 6px;
     background-size: 47px;
     color: #fff;
 }
 
 #google {
     border: 1px solid #95989A;
-    background: #fff url('../../assets/images/google.svg') no-repeat 25px;
+    background: #fff url('../../../assets/images/google.svg') no-repeat 25px;
     background-size: 25px;
 }
 
 #email {
-    background: #ECECEC url('../../assets/images/email.svg') no-repeat 25px;
+    background: #ECECEC url('../../../assets/images/email.svg') no-repeat 25px;
     background-size: 25px;
 }
 
 #github {
     border: 1px solid #95989A;
-    background: #444 url('../../assets/images/github.svg') no-repeat 25px;
+    background: #444 url('../../../assets/images/github.svg') no-repeat 25px;
     background-size: 25px;
     color: #FFF;
 }
