--- a/src/app/view/login-email/login-email.component.html
+++ b/src/app/view/login-email/login-email.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="form-auth-container">
     <a routerLink="/login" id="goback">Go back</a>
 
     <h2>Custom Login</h2>
@@ -27,7 +27,7 @@
 
         <button type="submit"
                 [disabled]="!formData.valid"
-                class="basic-btn">
+                class="btn-big basic-btn">
             Log in
         </button>
 
