--- a/src/app/view/reset-password/reset-password.component.html
+++ b/src/app/view/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="form-auth-container">
     <a routerLink="/login" id="goback">Go back</a>
 
     <h2>Reset your password</h2>
@@ -17,7 +17,7 @@
 
         <button type="submit"
                 [disabled]="!formData.valid"
-                class="basic-btn">
+                class="btn-big basic-btn">
             Reset
         </button>
 
