--- a/src/app/view/signup/signup.component.html
+++ b/src/app/view/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="form-auth-container">
     <a routerLink="/login" id="goback">Go back</a>
 
     <h2>Join now</h2>
@@ -30,7 +30,7 @@
 
         <button type="submit"
                 [disabled]="!formData.valid"
-                class="basic-btn">
+                class="btn-big basic-btn">
             Create my account
         </button>
 
