--- a/src/app/view/login-email/login-email.component.html
+++ b/src/app/view/login-email/login-email.component.html
@@ -14,7 +14,8 @@
                [(ngModel)]="user.email"
                name="email"
                class="txt"
-               required>
+               required
+               #iEmail>
 
         <input type="password"
                placeholder="Password"
