--- a/src/app/view/signup/signup.component.html
+++ b/src/app/view/signup/signup.component.html
@@ -12,7 +12,8 @@
                name="email"
                [(ngModel)]="user.email"
                class="txt"
-               required>
+               required
+               #iEmail>
 
         <input type="password"
                placeholder="Create a password..."
